--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "^4.5.7",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/native-stack": "^7.3.18",
@@ -17,14 +18,15 @@
     "expo-camera": "^16.1.8",
     "expo-media-library": "^17.1.7",
     "expo-status-bar": "~2.2.3",
-    "expo-video": "^2.2.2",
+    "expo-video": "~2.2.2",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
