--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "^4.5.7",
-    "@react-navigation/native": "^7.1.13",
-    "@react-navigation/native-stack": "^7.3.18",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.19",
     "expo": "~53.0.12",
+    "expo-av": "~15.1.6",
     "expo-camera": "^16.1.8",
     "expo-media-library": "^17.1.7",
     "expo-status-bar": "~2.2.3",
@@ -25,8 +27,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-av": "~15.1.6"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
